# LLmWiki-KennisBank

./: .gitattributes  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.template  CONFIGURATION.md  LICENSE  POST-INSTALL.md  PRINCIPLES.md  PRINCIPLES.nl.md  README.md  README.nl.md  TROUBLESHOOTING.md  VALUES.md  VALUES.nl.md  categories.example.json  kb-eval-set.example.json  kennisbank-embed.example.json  kennisbank-llm.example.json  kennisbank-settings.example.json  requirements.txt  setup.sh
atlas/: .gitignore  BUILD.md  README.md  doctor.py  launch.py  package-lock.json  package.json
atlas/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
atlas/src-tauri/src/: main.rs
commands/: brug.md  destilleer.md  import.md  reconcile.md  sessielog.md  sessiestart.md  uitdaag.md  wiki.md
docs/: agent-integrations.md  guiding-principles-and-values.md  guiding-principles-and-values.nl.md
scripts/: _activity.py  _common.py  _copilot.py  _hooks_manifest.py  _judge.py  _kbindex.py  _llm.py  _maintenance.py  _memory.py  _migrations.py  _rank.py  _settings.py  _sweepstate.py  _sweeputil.py  _usage.py  _vaultpath.py  activity-locales.json  auto-crosslink.py  build-embed-index.py  build-karpathy-index.py  build-kb-index.py  conflict-scan.py  context-budget.py  distill-notify.py  doctor.sh  eval-wiki-recall.py  find-similar.py  git-upstream-check.py  import-cc-history.py  import-chatgpt-export.py  import-claudeai-export.py  import-folder.py  install-agent-envs.py  intake-scan.py  kb-ask.py  kb-copilot-capture.py  kb-eval.py  kb-lint.py  kb-mcp.py  kb-noise.py  (+16 more)
tests/: __init__.py  (+56 more)
(+136 files in other folders)
